crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__comment_until_unix_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: comment_until_eol(UNIX_EOL)
---
## Tokens
```
[
    Int 0..3,
    Comment 5..10,
    Newline 10..11,
    Int 11..14,
    Newline 14..14,
]
```
